# commands-spiros

./: .gitignore  LICENSE  Main.hs  Makefile  commands-spiros.cabal  default.nix  emacs-interactive-commands.txt  interpreter.bat  run-backup-commands-spiros-server.bat  run-commands-spiros-server.bat  run.bat  shell.nix  stack.yaml  update.hs
config-osx/Commands/Backends/: OSX.hs  Workflow.hs
config-windows/Commands/Backends/: Workflow.hs
config/Commands/Backends/: Workflow.hs  Workflow_.hs
config/Commands/Plugins/: Spiros.hs
config/Commands/Plugins/Spiros/: Act.hs  Apply.hs  Chrome.hs  Config.hs  Correct.hs  Digit.hs  Edit.hs  Emacs.hs  Etc.hs  Extra.hs  Finite.hs  History.hs  IntelliJ.hs  Keys.hs  Macros.hs  Main.hs  Module.hs  Number.hs  Password.hs  Phrase.hs  Rank.hs  Root.hs  Server.hs  Shell.hs  Shim.hs  Shortcut.hs  Spacing.hs  Sustain.hs  Template.hs  TypeLevel.hs  Types.hs  Windows.hs
config/Commands/Plugins/Spiros/Act/: Execute.hs  Grammar.hs  Types.hs
config/Commands/Plugins/Spiros/Apply/: Types.hs
config/Commands/Plugins/Spiros/Chrome/: Gmail.hs
config/Commands/Plugins/Spiros/Correct/: Grammar.hs
config/Commands/Plugins/Spiros/Digit/: Grammar.hs
config/Commands/Plugins/Spiros/Edit/: Run.hs  Types.hs
config/Commands/Plugins/Spiros/Emacs/: Config.hs  Grammar.hs  InteractiveCommands.hs  Run.hs  Types.hs
config/Commands/Plugins/Spiros/Extra/: Types.hs
config/Commands/Plugins/Spiros/Finite/: Example.hs  Execute.hs  Grammar.hs  Types.hs
config/Commands/Plugins/Spiros/IntelliJ/: Grammar.hs  Run.hs
config/Commands/Plugins/Spiros/Language/: Haskell.hs
config/Commands/Plugins/Spiros/Macros/: Extra.hs  Types.hs
config/Commands/Plugins/Spiros/Phrase/: Munging.hs  Run.hs  Spacing.hs  Types.hs
config/Commands/Plugins/Spiros/Root/: Run.hs  Types.hs
config/Commands/Plugins/Spiros/Server/: QQ.hs  Settings.hs  Types.hs  Workflow.hs
config/Commands/Plugins/Spiros/Shell/: Grammar.hs  Run.hs  Types.hs
config/Commands/Plugins/Spiros/Shim/: API.hs  QQ.hs
config/Commands/Plugins/Spiros/Shortcut/: Types.hs
config/Commands/Plugins/Spiros/Template/: QQ.hs  Types.hs
config/Commands/Plugins/Spiros/Windows/: QQ.hs  Types.hs
config/Commands/Servers/: Servant.hs
config/Commands/Servers/Servant/: API.hs  Types.hs  V.hs
config/Commands/Servers/Servant/API/: Types.hs
config/Commands/Spiros/: Server.hs  Templates.hs
executables/: Main.hs
native/: CommandsSpiros.h
