name: commands-spiros
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: Copyright (C) 2015 Spiros M. Boosalis
maintainer: samboosalis@gmail.com
stability: experimental
homepage: https://github.com/sboosali/commands-spiros#readme
bug-reports: https://github.com/sboosali/commands-spiros/issues
synopsis: my configuration for commands
description:
    my configuration for commands: OS X backend; Dragon NaturallySpeaking frontend.
category: Voice Control
author: Spiros Boosalis
tested-with: GHC ==7.10.1
extra-source-files:
    README.md
    emacs-interactive-commands.txt

source-repository head
    type: git
    location: https://github.com/sboosali/commands-spiros


library
    hs-source-dirs: config

    if !os(osx)
        buildable: False

    exposed-modules:

        Commands.Plugins.Spiros

        Commands.Plugins.Spiros.Extra
        Commands.Plugins.Spiros.Extra.Types 

        Commands.Plugins.Spiros.Types 
        Commands.Plugins.Spiros.TypeLevel

        Commands.Plugins.Spiros.Config 
        Commands.Plugins.Spiros.Main 

        Commands.Plugins.Spiros.Apply
        Commands.Plugins.Spiros.Finite 
        Commands.Plugins.Spiros.Digit 

        Commands.Plugins.Spiros.Server 
        Commands.Plugins.Spiros.Server.Types
        Commands.Plugins.Spiros.Server.Workflow
        Commands.Plugins.Spiros.Server.Settings 
        Commands.Plugins.Spiros.Server.QQ 

        Commands.Plugins.Spiros.Correct 
        Commands.Plugins.Spiros.Correct.Grammar 

        Commands.Plugins.Spiros.Shim
        Commands.Plugins.Spiros.Shim.API 
        Commands.Plugins.Spiros.Shim.QQ

        Commands.Plugins.Spiros.Template
        Commands.Plugins.Spiros.Template.Types 
        Commands.Plugins.Spiros.Template.QQ 

        Commands.Plugins.Spiros.Windows 
        Commands.Plugins.Spiros.Windows.Types  
        Commands.Plugins.Spiros.Windows.QQ

        -- grammars 

        Commands.Plugins.Spiros.Root
        Commands.Plugins.Spiros.Root.Types 
        Commands.Plugins.Spiros.Root.Run 

        Commands.Plugins.Spiros.Macros
        Commands.Plugins.Spiros.Macros.Types 

        Commands.Plugins.Spiros.Shortcut
        Commands.Plugins.Spiros.Shortcut.Types

        Commands.Plugins.Spiros.Shell

        Commands.Plugins.Spiros.Keys

        Commands.Plugins.Spiros.Number 

        Commands.Plugins.Spiros.Phrase
        Commands.Plugins.Spiros.Phrase.Types
        Commands.Plugins.Spiros.Phrase.Run
        Commands.Plugins.Spiros.Phrase.Munging
        Commands.Plugins.Spiros.Phrase.Spacing

        Commands.Plugins.Spiros.Edit
        Commands.Plugins.Spiros.Edit.Types 
        Commands.Plugins.Spiros.Edit.Run 

        Commands.Plugins.Spiros.Emacs
        Commands.Plugins.Spiros.Emacs.Config
        Commands.Plugins.Spiros.Emacs.InteractiveCommands

        Commands.Plugins.Spiros.Chrome
        Commands.Plugins.Spiros.Chrome.Gmail

        Commands.Plugins.Spiros.IntelliJ
        Commands.Plugins.Spiros.IntelliJ.Grammar
        Commands.Plugins.Spiros.IntelliJ.Run

    build-depends:

        -- packages:
        -- cabal sandbox add-source ../
        commands-core ==0.0.0, 
        s-expression ==0.0.0, 
        enumerate ==0.2.1,
        workflow-osx ==0.0.1,

        -- extra-deps:  
        -- not on stack 
        language-python ==0.5.*, 

        -- on stack 
        haskell-src-meta ==0.6.*,
        process >= 1.2.3.0, 
        containers,
        mtl,
        wl-pprint-text,
        Earley ==0.10.1.0,
        text,
        semigroups,
        lens,
        exceptions,
        parallel,
        async,
        either,
        bytestring,
        transformers,
        filepath,
        interpolatedstring-perl6 ==1.*,
        split, 
        clock, 
        template-haskell ==2.10.*, 
        time, 
        stm ==2.4.*,  
        deepseq == 1.4.*, 
        haskeline, 
        ghc-prim==0.4.*,
        data-default, 

        -- newer
        wai,
        warp,
        vinyl,

        -- shared with command-spiros 
        aeson,  
        servant-client ==0.4.*,
        servant-server ==0.4.*,
        servant        ==0.4.*,

        -- ekmett 
        free,  

--         vty, 
        base >=4.8 && <5.0

    default-language: Haskell2010
    default-extensions: AutoDeriveTypeable, DeriveDataTypeable, DeriveGeneric, DeriveFunctor, DeriveFoldable, DeriveTraversable
    ghc-options: -Wall 


executable server
    main-is:        Main.hs
    hs-source-dirs: executables
    build-depends:  base >=4.8 && <5.0, commands-spiros

    default-language: Haskell2010
    ghc-options: 
     -threaded 
     -Wall 

